# atl_sound_exchange

./: .gitignore  README.md  prototype.txt
backend/: Cargo.toml  debug.txt  notes.txt  posts.json  to_do.txt
backend/src/: artist.rs  artist_data.rs  debug.txt  error.rs  genres.rs  main.rs  store.rs
backend/src/artist/: genre.rs  json_structure.rs
backend/src/fetch_data/: chartmetric.rs  local_db.rs  mod.rs
backend/src/migrations/: 20221020081506_artists_table.down.sql  20221020081506_artists_table.up.sql  20221021024725_create_accounts_table.up.sql
backend/src/routes/: .#artist.rs  artist_routes.rs  authentication.rs  mod.rs
backend/src/types/: account.rs  mod.rs  pagination.rs
backend/src/types/artist/: genre.rs  json_structure.rs  list.rs  mod.rs
data_api/: Cargo.toml
data_api/src/: main.rs
data_api_call/: api_call.py  deezer.py  instagram.py  soundcloud.py  spotify.py  tiktok.py  twitter.py  youtube_artist.py  youtube_channel.py
frontend/: package-lock.json  package.json
