[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = {version = "0.12.1", features = ["serde"]}
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tracing = {version = "0.1.36", features = ["log"]}
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
uuid = {version = "1.1.2", features = ["v4"]}
warp = "0.3.2"
